// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal render correctly 1`] = `
<div>
  <div
    class="ant-scrolling-effect"
    style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  />
  <div
    class="ant-modal-root"
  >
    <div
      class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
    />
    <div
      class="ant-modal-wrap ant-modal-centered"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="ant-modal osui-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
        role="document"
        style="width: 600px;"
      >
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
        <div
          class="ant-modal-content"
        >
          <button
            aria-label="Close"
            class="ant-modal-close"
            type="button"
          >
            <span
              class="ant-modal-close-x"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <div
            class="ant-modal-body"
          >
            Here is content of Modal
          </div>
          <div
            class="ant-modal-footer"
          >
            <div
              style="display: flex; align-items: center; justify-content: flex-end;"
            >
              <button
                class="ant-btn ant-btn-default osui-button"
                type="button"
              >
                <span>
                  取 消
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary osui-button"
                type="button"
              >
                <span>
                  确 定
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal render without footer 1`] = `
<div>
  <div
    class="ant-scrolling-effect"
    style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  />
  <div
    class="ant-modal-root"
  >
    <div
      class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
    />
    <div
      class="ant-modal-wrap ant-modal-centered"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="ant-modal osui-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
        role="document"
        style="width: 600px;"
      >
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
        <div
          class="ant-modal-content"
        >
          <button
            aria-label="Close"
            class="ant-modal-close"
            type="button"
          >
            <span
              class="ant-modal-close-x"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <div
            class="ant-modal-body"
          >
            Here is content of Modal
          </div>
        </div>
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Modal support closeIcon 1`] = `
<div
  class="ant-modal-root"
>
  <div
    class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
  />
  <div
    class="ant-modal-wrap ant-modal-centered"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="ant-modal osui-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
      role="document"
      style="width: 600px;"
    >
      <div
        aria-hidden="true"
        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
        tabindex="0"
      />
      <div
        class="ant-modal-content"
      >
        <button
          aria-label="Close"
          class="ant-modal-close"
          type="button"
        >
          <span
            class="ant-modal-close-x"
          >
            <a>
              closeIcon
            </a>
          </span>
        </button>
        <div
          class="ant-modal-body"
        />
        <div
          class="ant-modal-footer"
        >
          <div
            style="display: flex; align-items: center; justify-content: flex-end;"
          >
            <button
              class="ant-btn ant-btn-default osui-button"
              type="button"
            >
              <span>
                取 消
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary osui-button"
              type="button"
            >
              <span>
                确 定
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
